objects/EntityFiscalyear__c.object
<CustomObject>
    <fields>
        <fullName>EntityFiscalYearEID__c</fullName>
        <description>The Enterprise ID for this Entity Fiscal Year.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Entity Fiscal Year.</inlineHelpText>
        <label>Entity Fiscal Year EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <inlineHelpText>The entity whose fiscal year end date is being entered.</inlineHelpText>
        <label>Entity</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Fiscal Years</relationshipLabel>
        <relationshipName>EntityEntityFiscalyears</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FiscalYearEndDate__c</fullName>
        <inlineHelpText>Full fiscal year end date for this entity. Enter all relevant fiscal year end dates in separate records.</inlineHelpText>
        <label>Fiscal Year End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(LEFT(Entity__r.Name,74)) &amp; &apos;_&apos;&amp; TEXT(MONTH(FiscalYearEndDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(FiscalYearEndDate__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <label>Entity Fiscal Year</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>FiscalYearEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Fiscal Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Fiscal Years</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>